<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>fc</groupId>
        <artifactId>Freeverse</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>FC-SDK</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpmime</artifactId>
            <version>4.5.13</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.github.nobodyoffc</groupId>
            <artifactId>shadeBitcoinj159</artifactId>
            <version>0.7</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.114.Final</version>
        </dependency>
        
        <!-- ZXing dependencies for QR code scanning -->
        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>core</artifactId>
            <version>3.5.2</version>
        </dependency>
        
        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>javase</artifactId>
            <version>3.5.2</version>
        </dependency>
        <!-- SQLite JDBC Driver -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.49.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
        <!-- Nitrite NoSQL Database -->
<!--        <dependency>-->
<!--            <groupId>org.dizitart</groupId>-->
<!--            <artifactId>nitrite</artifactId>-->
<!--            <version>3.4.4</version>-->
<!--        </dependency>-->
                
        <!-- Realm Database -->
<!--        <dependency>-->
<!--            <groupId>io.realm</groupId>-->
<!--            <artifactId>realm-gradle-plugin</artifactId>-->
<!--            <version>10.15.1</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.realm.kotlin</groupId>-->
<!--            <artifactId>library-base</artifactId>-->
<!--            <version>1.13.0</version>-->
<!--        </dependency>-->

        <!-- LevelDB dependencies -->
        <dependency>
            <groupId>org.iq80.leveldb</groupId>
            <artifactId>leveldb</artifactId>
            <version>0.12</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.iq80.leveldb</groupId>
            <artifactId>leveldb-api</artifactId>
            <version>0.12</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>


</project>